--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <nav>
             <a href="index.html" class="logo">Portfolio</a>
             <ul>
-                <li><a href="index.html"></a>Home</li>
-                <li><a href="#"></a>Project</li>
-                <li><a href=""></a>Contact</li>
-                <li><a href="#"></a>Demo</li>
-                <li><a href="#"></a>Report</li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#">Project</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="#">Demo</a></li>
+                <li><a href="#">Report</a></li>
             </ul>
             <a href="#" class="contact-btn"><button>Contact</button></a>
         </nav>
