added html for home page content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anish Portfolio</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,5 +21,19 @@
             <a href="#" class="contact-btn"><button>Contact</button></a>
         </nav>
     </header>
+    <section class="personal detail">
+        <div class="introduction">
+            <h1>Anish Chamlagain</h1>
+            <h2>I'm a CS Student</h2>
+            <div class="download-cv">
+                <a href="#" class="download-cv-btn">Download CV</a>
+            </div>
+            <div class="social">
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-youtube' ></i></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
