added style on body content

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
             <a href="#" class="contact-btn"><button>Contact</button></a>
         </nav>
     </header>
-    <section class="personal detail">
+    <section class="personal-detail">
         <div class="introduction">
             <h1>Anish Chamlagain</h1>
             <h2>I'm a CS Student</h2>
+            <p>Hi, I'm a Computer Science student at the University of Northampton. I am currently learning web developmetn and Python and I have a passion about learning new technologies. I'm currently trying to expand my learning about frontend and backend development and on next year I'll be diving into data structures and allgorithm</p>
             <div class="download-cv">
                 <a href="#" class="download-cv-btn">Download CV</a>
             </div>
             <div class="social">
                 <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
                 <a href="#"><i class='bx bxl-youtube' ></i></a>
             </div>
         </div>
