--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="index.html" class="logo">Portfolio</a>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#">Project</a></li>
+                <li><a href="project.html">Project</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="#">Demo</a></li>
                 <li><a href="#">Report</a></li>
