Added display grid on home Because I wasn't sure if it was compulsory on home page or not

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section class="Home">
     <header>
         <nav>
             <a href="index.html" class="logo">Portfolio</a>
@@ -39,5 +40,6 @@
     <footer>
         <p>&copy; 2025 Anish Chamlagain. All rights reserved.</p>
     </footer>
+    </section>
 </body>
 </html>
