aranged project content using grid

--- a/project.html
+++ b/project.html
@@ -23,19 +23,23 @@
     <section class="project">
         <div class="first-project">
             <h1>Portfolio Website</h1>
-            <p>For Web development assignment I created a personal portfolio website. I learned soo many thing while working on this project.</p>
+            <p>For Web development assignment I created a personal portfolio website. I learned soo many thing while working on this project. This was my first project for web development and was buzzing to see how it turned out</p>
+            <img src="img/portfolio.png" alt="Portfolio Screenshot">
         </div>
         <div class="second-project">
             <h1>Claybrook zoo application</h1>
             <p>For Software Engineering Fundamental I was needed to create a application for Claybrook zoo. I was teamed up with my helpful friend and we created this application together and while doing this project I learned how to work on group</p>
+            <img src="img/Claybrook.jpg" alt="Claybrook Screenshot">
         </div>
         <div class="third-project">
             <h1>Facebook</h1>
             <p>I don't think anyone know who is the real creater of Facebook. Everyone is brainwashed into thinking it was Mark Zuckerberg but the truth is it wasn't him it was me</p>
+            <img src="img/facebook.jpg" alt="Facebook Screenshot">
         </div>
         <div class="fourth-project">
             <h1>Instagram</h1>
             <p>I don't think anyone know who is the real creater of Facebook. Everyone is brainwashed into thinking it was Kevin Systrom and Mike Krieger but the truth is it wasn't them it was me</p>
+            <img src="img/Instagram.jpg" alt="Instagram Screenshot">
         </div>
     </section>
 </body>
