--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="project.html">Project</a></li>
-                <li><a href="">Contact</a></li>
+                <!-- <li><a href="">Contact</a></li> -->
                 <li><a href="#">Demo</a></li>
                 <li><a href="#">Report</a></li>
             </ul>
