--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html" class="active">Project</a></li>
-                <li><a href="">Contact</a></li>
+                <!-- <li><a href="">Contact</a></li> -->
                 <li><a href="#">Demo</a></li>
                 <li><a href="#">Report</a></li>
             </ul>
