added footer on project page

--- a/project.html
+++ b/project.html
@@ -42,5 +42,8 @@
             <img src="img/Instagram.jpg" alt="Instagram Screenshot">
         </div>
     </section>
+    <footer>
+        <p>&copy; 2025 Anish Chamlagain. All rights reserved.</p>
+    </footer>
 </body>
 </html>
