--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <footer>
+    <header>
+        <nav>
+            <a href="index.html" class="logo">Portfolio</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Project</a></li>
+                <!-- <li><a href="">Contact</a></li> -->
+                <li><a href="demo.html" class="active">Demo</a></li>
+                <li><a href="#">Report</a></li>
+            </ul>
+            <a href="#" class="contact-btn"><button>Contact</button></a>
+        </nav>
+    </header>
 
 </body>
 </html>
