--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="project.html">Project</a></li>
                 <!-- <li><a href="">Contact</a></li> -->
-                <li><a href="#">Demo</a></li>
+                <li><a href="demo.html">Demo</a></li>
                 <li><a href="#">Report</a></li>
             </ul>
             <a href="#" class="contact-btn"><button>Contact</button></a>
