added style to Demo content and moved video link of html from outside to inside of class video

--- a/demo.html
+++ b/demo.html
@@ -20,6 +20,9 @@
             <a href="#" class="contact-btn"><button>Contact</button></a>
         </nav>
     </header>
-
+    <section class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_GM-cGqZ5XI?si=Ded2dPkBr0KCQS5L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <a href="#" class="video-link">Video URL is Here</a>
+    </section>
 </body>
 </html>
