Added navigation on contact page and small changes on contact button cuz it was giving error while validation

--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
                 <li><a href="demo.html">Demo</a></li>
                 <li><a href="#">Report</a></li>
             </ul>
-            <a href="#" class="contact-btn"><button>Contact</button></a>
+            <a href="contact.html" class="contact-btn">Contact</a>
         </nav>
     </header>
     <section class="project">
