--- a/contact.html
+++ b/contact.html
@@ -14,15 +14,11 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Project</a></li>
                 <!-- <li><a href="">Contact</a></li> -->
-                <li><a href="demo.html" class="active">Demo</a></li>
+                <li><a href="demo.html">Demo</a></li>
                 <li><a href="#">Report</a></li>
             </ul>
             <a href="contact.html" class="contact-btn">Contact</a>
         </nav>
     </header>
-    <section class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_GM-cGqZ5XI?si=Ded2dPkBr0KCQS5L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <a href="#" class="video-link">Video URL is Here</a>
-    </section>
 </body>
 </html>
