--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,8 @@
             <a href="contact.html" class="contact-btn">Contact</a>
         </nav>
     </header>
-    <div class="form">
+    <div class="contact-body"></div>    
+    <div class="contact-form">
             <h2>Get in touch</h2>
             <form action="#">
                 <div>
@@ -43,9 +44,9 @@
                     <input type="text" name="subject" id="subject" placeholder="About something" required>
                 </div>
 
-                <div>
+                <div class="form-message">
                     <label for="message">Message*</label>
-                    <input type="text" name="email" id="message" placeholder="Message" required>
+                    <input type="text" name="message" id="message" placeholder="Message" required>
                 </div>
 
                 <div>
@@ -57,6 +58,7 @@
                 </div>
             </form>
             
+    </div>
     </div>
 </body>
 </html>
