replaced all the # with report.html

--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
                 <li><a href="project.html">Project</a></li>
                 <!-- <li><a href="">Contact</a></li> -->
                 <li><a href="demo.html" class="active">Demo</a></li>
-                <li><a href="#">Report</a></li>
+                <li><a href="report.html">Report</a></li>
             </ul>
             <a href="contact.html" class="contact-btn">Contact</a>
         </nav>
