--- a/report.html
+++ b/report.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html" class="logo">Portfolio</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Project</a></li>
+                <!-- <li><a href="">Contact</a></li> -->
+                <li><a href="demo.html">Demo</a></li>
+                <li><a href="report.html" class="active">Report</a></li>
+            </ul>
+            <a href="contact.html" class="contact-btn">Contact</a>
+        </nav>
+    </header>
     
 </body>
 </html>
