--- a/project.html
+++ b/project.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" media="screen and (min-width: 1000px)">
+    <link rel="stylesheet" href="same.css">
 </head>
 <body>
     <header>
