--- a/report.html
+++ b/report.html
@@ -6,15 +6,17 @@
     <title>Anish Portfolio</title>
     <link rel="stylesheet" href="styles.css" media="screen and (min-width: 1000px)">
     <link rel="stylesheet" href="same.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 1000px)">
 </head>
 <body>
     <header>
-        <nav>
+        <a href="#nav-menu" class="hamburger">&#9776;</a> <!-- Open Menu -->
+        <nav class="nav-menu" id="nav-menu">
+            <a href="#" class="close-menu">&times;</a> <!-- Close Menu -->
             <a href="index.html" class="logo">Portfolio</a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Project</a></li>
-                <!-- <li><a href="">Contact</a></li> -->
                 <li><a href="demo.html">Demo</a></li>
                 <li><a href="report.html" class="active">Report</a></li>
             </ul>
@@ -32,6 +34,22 @@
         <img src="img/ins.png" alt="Inspiration Website">
         <h2>Validation Screenshot</h2>
         <p>Below are all the validation screenshot of the html and css</p>
+        <h3>Home page</h3>
+        <img src="img/index-html.png" alt="Home-page validation">
+        <h3>Demo Page</h3>
+        <img src="img/demo-html.png" alt="demo Validation">
+        <h3>Contact page</h3>
+        <img src="img/contact-html.png" alt="Contact validation">
+        <h3>Project page</h3>
+        <img src="img/project-html.png" alt="project validation">
+        <h3>Report page</h3>
+        <img src="img/report-html.png" alt="report validation">
+        <h3>Mobile css</h3>
+        <img src="img/mobile-css.png" alt="">
+        <h3>Desktop css</h3>
+        <img src="img/styles-css.png" alt="">
+        <h3>Combined CSS</h3>
+        <img src="img/same-css.png" alt="">
         
     </main>
 
