--- a/contact.html
+++ b/contact.html
@@ -6,22 +6,24 @@
     <title>Anish Portfolio</title>
     <link rel="stylesheet" href="styles.css" media="screen and (min-width: 1000px)">
     <link rel="stylesheet" href="same.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 1000px)">
 </head>
 <body>
     <header>
-        <nav>
+        <a href="#nav-menu" class="hamburger">&#9776;</a> <!-- Open Menu -->
+        <nav class="nav-menu" id="nav-menu">
+            <a href="#" class="close-menu">&times;</a> <!-- Close Menu -->
             <a href="index.html" class="logo">Portfolio</a>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Project</a></li>
-                <!-- <li><a href="">Contact</a></li> -->
+                <li><a href="project.html" class= "active">Project</a></li>
                 <li><a href="demo.html">Demo</a></li>
                 <li><a href="report.html">Report</a></li>
             </ul>
             <a href="contact.html" class="contact-btn">Contact</a>
         </nav>
     </header>
-    <div class="contact-body"></div>    
+    <main class="contact"> 
     <div class="contact-form">
             <h2>Get in touch</h2>
             <form action="#">
@@ -60,6 +62,6 @@
             </form>
             
     </div>
-    </div>
+    </main>
 </body>
 </html>
