--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <h2>I'm a CS Student</h2>
             <p>Hi, I'm a Computer Science student at the University of Northampton. I am currently learning web developmetn and Python and I have a passion about learning new technologies. I'm currently trying to expand my learning about frontend and backend development and on next year I'll be diving into data structures and allgorithm</p>
             <div class="download-cv">
-                <a href="#" class="download-cv-btn">Download CV</a>
+                <a href="Anish.pdf" class="download-cv-btn" download>Download CV</a>
             </div>
             <div class="social">
-                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/AnishChalmagain" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
                 <a href="#"><i class='bx bxl-youtube' ></i></a>
             </div>
