--- a/demo.html
+++ b/demo.html
@@ -24,8 +24,8 @@
         </nav>
     </header>
     <main class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_GM-cGqZ5XI?si=Ded2dPkBr0KCQS5L" title="YouTube video player" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <a href="#" class="video-link">Video URL is Here</a>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/UiMYOhf-nwI?si=-XvFACU1o4-ONnvr" title="YouTube video player" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <a href="https://youtu.be/UiMYOhf-nwI" class="video-link" target="_blank">Video URL is Here</a>
     </main>
 </body>
 </html>
